--- a/src/simple-completion/simple-completion-example.ipynb
+++ b/src/simple-completion/simple-completion-example.ipynb
@@ -19,10 +19,14 @@
     "import openai"
    ],
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2024-03-06T02:32:04.591161Z",
+     "start_time": "2024-03-06T02:32:04.407051Z"
+    }
    },
    "id": "initial_id",
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -36,16 +40,29 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-06T02:32:04.597810Z",
+     "start_time": "2024-03-06T02:32:04.592535Z"
+    }
    },
    "id": "fa52fb2fda276670",
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -59,7 +76,15 @@
   },
   {
    "cell_type": "code",
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, user! How can I assist you today?\n"
+     ]
+    }
+   ],
    "source": [
     "try:\n",
     "    \n",
@@ -104,10 +129,14 @@
     "    print(f\"An error occurred: {e}\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-06T02:32:07.810967Z",
+     "start_time": "2024-03-06T02:32:04.598532Z"
+    }
    },
    "id": "48e8737c7cc22a0b",
-   "execution_count": null
+   "execution_count": 3
   }
  ],
  "metadata": {
